# ha-aquastar

./: .gitignore  CLAUDE.md  Makefile  README.md  prek.toml  pyproject.toml
custom_components/toc_aquastar/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  manifest.json  rates.py  strings.json
custom_components/toc_aquastar/client/: __init__.py  __main__.py  client.py  const.py  exceptions.py  models.py  session.py
docs/: development.md
tests/: test_client.py  test_rates.py  test_session.py
tests/fixtures/: dashboard.html  hourly.html  results.html  usage.xls
